tdf#157816 sw: fix getting position in field portion follow

SwSpecialPos can be used to get index inside a field, but
SwTextCursor::GetModelPositionForViewPoint() has several problems:
* the field portion follow has length 0 so an early return is taken
* the nCharOfst is set to the index in the portion, but it needs to
  also count preceding portions of the same field in the line,
  and nLineOfst needs to be set as well, because the SwPosition
  corresponds to the start of the field
* m_bFieldInfo must be set to guarantee SwPosition before the field
  in the nLenght==0 branch, but then there are 2 branches that first
  set nLength=0 and then decrement it, resulting in a SwPosition 1
  char before the field.

Change-Id: Ib7d30981e41b40f4c068fa6d84211c000ecde753
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158570
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>